c4prj2_input/grade.txt
Grading at Wed Mar 10 15:15:30 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:23:7: error: statement with no effect [-Werror=unused-value]
       fc 
       ^
input.c:24:6: error: expected ‘;’ before ‘}’ token
      }
      ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
